fix academic_torrents h2 word-wrap and fix unnessary highlight if the query is less than 1

--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ h2 {
     font-size: 20px;
     color: var(--foreground-100);
     border-radius: 10px 10px 0px 0px;
+    word-wrap: break-word;
 }
 
 
